tests/safety/reject/index_oob.keel
def main(sys: System); Io:
    a = [1, 2, 3]
    println(a[10])
